# gdb-mcp

./: .gitignore  README.md  demo.py  mcp_config.json  pyproject.toml  simple_test.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_simple.py  test_process_manager.py  test_server.py
cortex_m7_hello_world/: Makefile  README.md  gdb_debug.bat  gdb_debug.sh  main.c  qemu_run.bat  qemu_run.sh  startup.c  stm32f7xx.ld  test_with_mcp.py
examples/: basic_usage.py
gdb_mcp/: __init__.py  main.py  models.py  process_manager.py  server.py
tests/: __init__.py
