[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdb-mcp"
version = "0.1.0"
description = "MCP server for GDB and QEMU process management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pexpect>=4.8.0",
    "pygdbmi>=0.10.0.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
gdb-mcp = "gdb_mcp.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

